tests/baselines/reference/staticOffOfInstance1.errors.txt
==== tests/cases/compiler/staticOffOfInstance1.ts (1 errors) ====
    class List {
      public Blah() {
        this.Foo();
             ~~~
!!! error TS2094: The property 'Foo' does not exist on value of type 'List'.
      }
      public static Foo() {}
    }